kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: portfolio-ingress

  namespace: portfolio-app


spec:

  ingressClassName: nginx


  rules:

  - host: myapp.local


    http:

      paths:


      - path: /

        pathType: Prefix


        backend:

          service:

            name: frontend-service

            port:

              number: 80



      - path: /api

        pathType: Prefix


        backend:

          service:

            name: backend-service

            port:

              number: 5000
